tests/compile/fail/send_sync.stderr
error[E0277]: `dyn TestTrait` cannot be shared between threads safely
  --> tests/compile/fail/send_sync.rs:17:15
   |
17 |     require_send(&*dynbox);
   |     ------------ ^^^^^^^^ `dyn TestTrait` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Dyn<dyn TestTrait>`, the trait `Sync` is not implemented for `dyn TestTrait`
   = note: required because it appears within the type `PhantomData<dyn TestTrait>`
   = note: required because it appears within the type `dyntable::DynRefInternalRepr<dyn TestTrait>`
   = note: required because it appears within the type `[dyntable::DynRefInternalRepr<dyn TestTrait>]`
   = note: required because it appears within the type `Dyn<dyn TestTrait>`
   = note: required for `&Dyn<dyn TestTrait>` to implement `Send`
note: required by a bound in `require_send`
  --> tests/compile/fail/send_sync.rs:6:20
   |
6  | fn require_send<T: Send>(_: T) {}
   |                    ^^^^ required by this bound in `require_send`

error[E0277]: `dyn TestTrait` cannot be shared between threads safely
  --> tests/compile/fail/send_sync.rs:19:15
   |
19 |     require_sync(&*dynbox);
   |     ------------ ^^^^^^^^ `dyn TestTrait` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `&Dyn<dyn TestTrait>`, the trait `Sync` is not implemented for `dyn TestTrait`
   = note: required because it appears within the type `PhantomData<dyn TestTrait>`
   = note: required because it appears within the type `dyntable::DynRefInternalRepr<dyn TestTrait>`
   = note: required because it appears within the type `[dyntable::DynRefInternalRepr<dyn TestTrait>]`
   = note: required because it appears within the type `Dyn<dyn TestTrait>`
   = note: required because it appears within the type `&Dyn<dyn TestTrait>`
note: required by a bound in `require_sync`
  --> tests/compile/fail/send_sync.rs:7:20
   |
7  | fn require_sync<T: Sync>(_: T) {}
   |                    ^^^^ required by this bound in `require_sync`

error[E0277]: `(dyn NoBounds + 'static)` cannot be sent between threads safely
  --> tests/compile/fail/send_sync.rs:22:15
   |
22 |     require_send(dynbox);
   |     ------------ ^^^^^^ `(dyn NoBounds + 'static)` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Send` is not implemented for `(dyn NoBounds + 'static)`
   = note: required for `DynUnique<dyn TestTrait>` to implement `Send`
   = note: required because it appears within the type `DynBox<dyn TestTrait>`
note: required by a bound in `require_send`
  --> tests/compile/fail/send_sync.rs:6:20
   |
6  | fn require_send<T: Send>(_: T) {}
   |                    ^^^^ required by this bound in `require_send`

error[E0277]: `(dyn NoBounds + 'static)` cannot be shared between threads safely
  --> tests/compile/fail/send_sync.rs:24:15
   |
24 |     require_sync(dynbox2);
   |     ------------ ^^^^^^^ `(dyn NoBounds + 'static)` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Sync` is not implemented for `(dyn NoBounds + 'static)`
   = note: required for `DynUnique<dyn TestTrait>` to implement `Sync`
   = note: required because it appears within the type `DynBox<dyn TestTrait>`
note: required by a bound in `require_sync`
  --> tests/compile/fail/send_sync.rs:7:20
   |
7  | fn require_sync<T: Sync>(_: T) {}
   |                    ^^^^ required by this bound in `require_sync`
